objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Acuity_Score__c</fullName>
        <label>Acuity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPB_Dataset__c</fullName>
        <description>Who: Brian Ricter 
When: 242.1 Spring 2023</description>
        <label>EPB Dataset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scoring Enrollment</fullName>
                </value>
                <value>
                    <fullName>Enrolled Last Year</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Enroll Last Year</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Donate Last Year</fullName>
                </value>
                <value>
                    <fullName>Scoring Advancement</fullName>
                </value>
                <value>
                    <fullName>Donated Last Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Who: Brian Ricter 
When: 242.1 Spring 2023</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Likelihood_to_Enroll__c</fullName>
        <label>Likelihood to Enroll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGO_Base_Contact_Picture_URL__c</fullName>
        <label>Contact Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Cust360_Contact_Picture_URL__c</fullName>
        <description>What: used by Customer 360 Component</description>
        <label>Cust360 Contact Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Cust360_Engagement_Score__c</fullName>
        <label>Cust360 Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGO_Cust360_Metric1__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Metric 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Cust360_Metric2__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Metric 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Cust360_Metric3__c</fullName>
        <label>Cust360 Metric 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_Cust360_Purchase_Score__c</fullName>
        <label>Cust360 Purchase Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGO_Programs_Base_Age__c</fullName>
        <formula>YEAR( TODAY())- YEAR(Birthdate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Who: Brian Ricter 
When: 242.1 Spring 2023</description>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Certification_Level_c__c</fullName>
        <description>What: Partner Contact certification level, used on the Partner Contact layout.</description>
        <label>Certification Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Cust360_CSAT__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 CSAT</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_ChurnRisk__c</fullName>
        <description>What: used in the Customer 360 Multiple Object Highlight component.</description>
        <label>Risk of Churn</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Contact_Picture_URL__c</fullName>
        <description>What: used by Customer 360 Component</description>
        <label>Cust360 Contact Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Id__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Metric1__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Metric 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Metric2__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Metric 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Dataset_Split__c</fullName>
        <description>SDO Maps Contact number field to split maps-related datasets equally and easily 02-02-23</description>
        <label>Contact Dataset Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Days_Since_Last_Visit__c</fullName>
        <description>SDO MAPS number field to represent days since visited Contacts in territories. This highlights neglected accounts easily in reports and visually in Maps. 02-02-23</description>
        <label>Days Since Last Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Tag_Contact__c</fullName>
        <description>SPM MAPS Contact dataset tag to help manage datasets in Maps and Territory Planning. 02-03-23 AB</description>
        <label>Tag Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Value_Tier__c</fullName>
        <description>SDO MAPS Contact tier field for maps routing and territory planning optimization and segmentation scenarios. 02-02-23 AB</description>
        <label>Value Tier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_PA_Inclusive_Preferred_Name__c</fullName>
        <description>What: Inclusive Field for Preferred Name</description>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_PA_Inclusive_Pronouns__c</fullName>
        <description>What: Inclusivity Field for preferred Pronoun.</description>
        <label>Preferred Pronoun</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDO_General_Inclusive_Pronouns</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PA_Inclusive_TDD_TTY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Inclusivity for Impaired hearing</description>
        <inlineHelpText>Does this individual have impaired hearing?</inlineHelpText>
        <label>TDD / TTY Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_PA_Preferred_Contact_Channel__c</fullName>
        <description>What: The preferred contact method for this contact</description>
        <label>Preferred Contact Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Facebook Messenger</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PA_Year_of_Birth__c</fullName>
        <description>What: Used by the Identity and Verification (ID&amp;V) flow.</description>
        <inlineHelpText>Used by the Identity and Verification (ID&amp;V) flow.</inlineHelpText>
        <label>Year of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Access__c</fullName>
        <label>B2B Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B2B Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>B2B Approver Contacts</relationshipLabel>
        <relationshipName>B2B_Approver_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Budget_Limit__c</fullName>
        <label>B2B Budget Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Rider_BotContext__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: A reference to the most recent service appointment an outbound notification was sent about. Who: SFS/FSL team</description>
        <inlineHelpText>A reference to the most recent service appointment an outbound notification was sent about</inlineHelpText>
        <label>Rider Context</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Rider_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Denotes if the Contact is allowed to interact with Rider</description>
        <inlineHelpText>Denotes if the Contact is allowed to interact with Rider</inlineHelpText>
        <label>Rider Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Rider_ServiceTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: The Service Territory of the Contact (for Rider to schedule service appointments)</description>
        <inlineHelpText>The Service Territory of the Contact (for Rider to schedule service appointments)</inlineHelpText>
        <label>Rider Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Tracker_BotContext__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used by the Tracker Bot</description>
        <label>Tracker BotContext</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Contacts (Tracker BotContext)</relationshipLabel>
        <relationshipName>TContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Month_of_Birth__c</fullName>
        <description>What: Used by the Identity and Verification (ID&amp;V) flow. Who: Service Team</description>
        <inlineHelpText>Used by the Identity and Verification (ID&amp;V) flow.</inlineHelpText>
        <label>Month of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Primary_Messaging_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Relationship to Messaging User. Used in multiple flows for Service. Who: Service Cloud Team.</description>
        <label>Primary Messaging User</label>
        <referenceTo>MessagingEndUser</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Service_SMS_Message__c</fullName>
        <description>What: The content of the SMS message to send out. This will be triggered by a process builder, and should be updated via quick action only. Used in the Service - Contact - Send Ad-hoc SMS Flow. Who: Service Team</description>
        <label>SMS Message</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TDD_TYY_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Who: Brian Ricter 
When: 242.1 Spring 2023</description>
        <label>TDD / TYY Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Contact_Picture_URL__c</fullName>
        <label>Cust360 Contact Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Engagement_Score__c</fullName>
        <label>Cust360 Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Id__c</fullName>
        <label>Cust360 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Metric1__c</fullName>
        <label>Cust360 Metric 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Metric2__c</fullName>
        <label>Cust360 Metric 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Metric3__c</fullName>
        <label>Cust360 Metric 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Purchase_Score__c</fullName>
        <label>Cust360 Purchase Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Propensity_to_Churn__c</fullName>
        <label>Propensity to Churn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <recordTypes>
        <fullName>SDO_Contact</fullName>
        <active>true</active>
        <description>For all contacts.</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Partner_Contact</fullName>
        <active>true</active>
        <description>For contacts who are partners, distributors or resellers.</description>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>